Fix a hangup when starting painting too quickly after changing opacity

Opacity and Blending mode are now changed using a stroke. Therefore,
opacity change will arrive **after** the stroke has finished :)

BUG:405879